# pyment-service-mkk

./: .env-example  .gitignore  Dockerfile  README.md  cli.py  docker-compose.yml  manager.py  pyproject.toml
src/api/: application.py  bootstrap.py  main.py
src/api/health_checks/: __init__.py  router.py
src/api/v1/: __init__.py  dependencies.py  router.py
src/api/v1/payment/: repository.py  router.py  schemes.py  service.py
src/consumer/: application.py  bootstrap.py  main.py
src/consumer/payments/: exchanges.py  repository.py  schemes.py  service.py  subscriptions.py
src/core/: consts.py  settings.py
src/core/brokers/: __init__.py  rabbitmq.py
src/core/database/: __init__.py  core.py
src/core/database/mixins/: __init__.py  serialize.py  timestamp.py
src/core/database/models/: __init__.py  outbox.py  payment.py
src/core/database/revisions/: env.py
src/core/database/revisions/versions/: 2026_06_04-1bc767863f3f.py  2026_06_06-1518d295972e.py
src/worker/: README.md  application.py  bootstrap.py  main.py
src/worker/outbox/: repository.py  service.py  worker.py
