[project]
name = "payments-service-mkk"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Kondratev",email = "egor_kondratev_00@mail.ru"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0.50,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "faststream[rabbit] (>=0.7.1,<0.8.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "typer (>=0.26.7,<0.27.0)",
    "fastapi[all] (>=0.136.3,<0.137.0)",
    "punq (>=0.7.0,<0.8.0)",
    "uvloop (>=0.21.0,<0.22.1)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
