[project]
name = "payments-service-mkk"
version = "0.1.0"
description = ""
authors = [
    {name = "Egor Kondratev",email = "egor_kondratev_00@mail.ru"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "sqlalchemy[asyncio] (>=2.0.50,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "faststream[rabbit] (>=0.7.1,<0.8.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "ruff (>=0.15.15,<0.16.0)",
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "typer (>=0.26.7,<0.27.0)",
    "fastapi[all] (>=0.136.3,<0.137.0)",
    "punq (>=0.7.0,<0.8.0)",
    "uvloop (>=0.21.0,<0.22.1)",
    "taskiq (>=0.12.4,<0.13.0)",
    "taskiq-aio-pika (>=0.6.0,<0.7.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py312']  # Целевая версия Python


[tool.isort]
py_version = 312
profile = "black"  # Совместимость с Black (использует правила форматирования Black)
line_length = 120  # Длина строки (должна совпадать с Black)
multi_line_output = 3  # Определяет стиль вывода (3 — вертикальный вывод, предпочтительный для Black)
include_trailing_comma = true  # Включить запятую в конце списка
force_grid_wrap = 0  # Разбиение по сетке (0 для выключения)
use_parentheses = true  # Использование скобок для длинных импортов
ensure_newline_before_comments = true  # Перенос строки перед комментариями
virtual_env = "./.venv"


[tool.ruff]
line-length = 120
lint.select = [
  "F", "E", "W", "C90", "UP",
  "N", "YTT", "S", "BLE", "FBT",
  "B", "A", "C4", "T20", "Q",
  "RET", "SIM", "ARG", "ERA",
  "PGH"
]
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "app/core/database/revisions",
    ".venv",
]
lint.ignore = ["S104", "B008", "S101"]

